1.9.13
------
(RB=196626)
Added batch operations to the async complex key template. 

(RB=196751)
Fixing the schema resolution ordering problem.

(RB=196208)
Disallow @QueryParam in action methods, disallow @ActionParam in non-action methods.

1.9.12
------
(RB=196204)
Fixing data template generator to process type refs specified as array and map items.

(RB=192500)
Add class to filter DataSchemas in a directory by removing unwanted fields or custom properties of the schema according to given Predicate.

(RB=196098)
Improve FileClassNameScanner to 1) require a specific extension; 2) exclude whose guessed class name contains dots.

1.9.11
------
(RB=194990)
Added batch operations to the async association template.

(RB=190812)
allow specifying an empty string for coloVariants, useful in testing.

1.9.10
------
(RB=195487)
Fix a problem that can block Netty boss thread for a long time.

(RB=195243)
Fixed issue with Complex Keys with fields arrays containing a single element in get requests.

(RB=194339)
Fixing Example Generator to create correct request body for partial updates.

(RB=193189)
Added batch methods to the async interface and template for simple (non complex key, non association) collections.

(RB=190386)
Fixing couple of issues in annotated complex-key resources and async complex-key resource template. Adding extensive test covarage for both scenarios.

(RB=193265)
Add Union template builder method per member.

1.9.9
-----
(RB=188507)
fix the bug where threads that are waiting for state initialization, never stop waiting because the init step throws an exception

1.9.8
-----
(RB=192299)
Added fix to prevent a complex key when a CollectionResource is being used.

1.9.7
-----
(RB=190153)
Protect D2 from intermittent zookeeper problem

1.9.6
-----
(RB=188125)
Changed Snappy dependency to pure Java dependency to avoid JNI issues on Jetty.

1.9.5
-----
(RB=189900)
Add HttpNettyServerFactory and standalone launcher.

1.9.4
-----
(RB=189079)